--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -391,15 +391,22 @@ p > a {
 //#endregion
 
 //#region scrollbar 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+*::-webkit-scrollbar {
   width: 10px;
+  @include tablet(){
+    width:3px;
+  }
 }
  
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   background-color: transparent;
 }
  
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   background-color: var(--accent1);
 }
 //#endregion
